--- a/src/ui/UserCard.module.css
+++ b/src/ui/UserCard.module.css
@@ -95,6 +95,13 @@
   flex: 1;
 }
 
+.checkmarks {
+  color: #53bdeb;
+  font-size: 12px;
+  font-weight: 600;
+  margin-right: 2px;
+}
+
 .badgeContainer {
   display: flex;
   align-items: center;
